crates/compiler/tests/parse_errors/unexpected_equals.txt
-- UNEXPECTED EQUALS ---------------------------------------------- src/Main.elm

I was not expecting to see this equals sign:

3|  = 2
    ^
Maybe you want == instead? To check if two values are equal?

Note: I may be getting confused by your indentation. I think I am still parsing
the `x` definition. Is this supposed to be part of a definition after that? If
so, the problem may be a bit before the equals sign. I need all definitions to
be indented exactly the same amount, so the problem may be that this new
definition has too many spaces in front of it.

